# hazakura-nenrin

./: LICENSE  README.md  pyproject.toml
docs/: adoption_guide.md  agent-usage.md  development_loop.md  integration.md  philosophy.md  release-checklist.md  roadmap.md
examples/nenrin/: README.md
nenrin/: README.md  config.yaml  index.md  metrics.md
nenrin/changes/: 2026-05-03-generated-index-active-links.md  2026-05-03-ignore-placeholder-failure-signals.md  2026-05-03-pruning-automation-principles.md  2026-05-03-roadmap-ai-usable-from-start.md  2026-05-04-agents-roadmap-v0-3-x-update.md  2026-05-04-clarify-tool-roles-agents-primary.md  2026-05-04-roadmap-tool-role-boundaries.md  2026-05-04-v0-3-x-stabilization.md  2026-05-04-v0-4-remote-agent-workflow.md  2026-05-04-v0-5-compaction-summary-decisions.md  2026-05-04-v0-6-cloudflare-backend-abstraction.md  2026-05-05-diff-command-tracked-files.md  2026-05-05-roadmap-foundation-hardening.md  2026-05-06-release-beta-reference-positioning.md  2026-05-07-roadmap-drift-doc-sync.md  2026-05-07-track-ledger-readme-diff.md  2026-05-08-automation-cadence-dev-version.md  2026-05-08-v0-2-release-gate-record-pressure.md  2026-05-09-record-shape-debt-warnings.md  2026-05-10-invalid-state-debt-warnings.md  2026-05-10-keep-observing-review-window.md  2026-05-11-brief-active-observation-limit.md  2026-05-13-habitat-validation-command-metadata.md  2026-05-15-ai-agent-adoption-guide.md  2026-05-16-external-use-intake-automation.md
nenrin/observations/: 2026-05-03-philosophy-docs-preserve-early-stance.md  (+12 more)
tests/: test_nenrin.py
(+35 files in other folders)
