[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hazakura-nenrin"
version = "0.1.0"
description = "A lightweight improvement observation ledger for AI agent working environments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hazakura Project" }
]
dependencies = []

[project.scripts]
nenrin = "nenrin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
