[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hazakura-nenrin"
version = "0.2.0.dev0"
description = "A lightweight improvement observation ledger for AI agent working environments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Hazakura Project" }
]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
nenrin = "nenrin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
